package com.bo.structuralPattern.facade.pojo;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.ToString;

@Data
@AllArgsConstructor
@ToString
@NoArgsConstructor
public class TeaLeaf {
    private String teaName;
    // 省略...
}    